name:           Kolproxy
version:        3.11
synopsis:       Kingdom of Loathing user interface
author:         Tor Gunnar Houeland
build-type:     Simple
cabal-version:  >= 1.2

-- Helper file for compiling kolproxy with ghc-7.4.2
--
-- Used for automatically installing dependencies
--   cabal install --only-dependencies
--
-- Then e.g.:
--   ghc -threaded -DKOLPROXY_RELEASEBUILD=linux -optc-DLUA_USE_LINUX --make proxy.hs Scripting/*.c -o kolproxy

executable kolproxy
  build-depends:
    base,
    base64-bytestring,
    bytestring,
    bzlib,
    cgi,
    containers,
    directory,
    filepath,
    json,
    network,
    process,
    pureMD5,
    random,
    regex-tdfa,
    time,
    unix,
    xml,
    zlib,
    HTTP,
    cryptocipher,
    tls,
    cprng-aes,
    utf8-string,
    network-uri
  c-sources:
    Scripting/lapi.c Scripting/lauxlib.c Scripting/lbaselib.c Scripting/lcode.c
    Scripting/ldblib.c Scripting/ldebug.c Scripting/ldo.c Scripting/ldump.c
    Scripting/lfunc.c Scripting/lgc.c Scripting/linit.c Scripting/liolib.c
    Scripting/llex.c Scripting/lmathlib.c Scripting/lmem.c Scripting/loadlib.c
    Scripting/lobject.c Scripting/lopcodes.c Scripting/loslib.c Scripting/lparser.c
    Scripting/lstate.c Scripting/lstring.c Scripting/lstrlib.c Scripting/ltable.c
    Scripting/ltablib.c Scripting/ltm.c Scripting/lundump.c Scripting/lvm.c
    Scripting/lzio.c Scripting/ntrljmp.c Scripting/print.c
    Database/sqlite3.c
  cc-options: -DLUA_USE_LINUX
  ghc-options: -threaded
  main-is: proxy.hs
